--- a/public/css/app.css
+++ b/public/css/app.css
@@ -9045,10 +9045,6 @@ video {
   bottom: 0px;
   left: 0px;
 }
-.inset-x-0{
-  left: 0px;
-  right: 0px;
-}
 .inset-y-0{
   top: 0px;
   bottom: 0px;
@@ -9124,6 +9120,15 @@ video {
 .-ml-px{
   margin-left: -1px;
 }
+.mr-2{
+  margin-right: 0.5rem;
+}
+.mt-4{
+  margin-top: 1rem;
+}
+.mb-4{
+  margin-bottom: 1rem;
+}
 .mt-5{
   margin-top: 1.25rem;
 }
@@ -9133,8 +9138,11 @@ video {
 .mt-1{
   margin-top: 0.25rem;
 }
-.mb-4{
-  margin-bottom: 1rem;
+.mt-0{
+  margin-top: 0px;
+}
+.-mb-px{
+  margin-bottom: -1px;
 }
 .mb-2{
   margin-bottom: 0.5rem;
@@ -9154,12 +9162,6 @@ video {
 .mr-3{
   margin-right: 0.75rem;
 }
-.mt-0{
-  margin-top: 0px;
-}
-.mr-2{
-  margin-right: 0.5rem;
-}
 .mb-10{
   margin-bottom: 2.5rem;
 }
@@ -9177,12 +9179,6 @@ video {
 }
 .mt-0\.5{
   margin-top: 0.125rem;
-}
-.-mb-px{
-  margin-bottom: -1px;
-}
-.mt-4{
-  margin-top: 1rem;
 }
 .ml-6{
   margin-left: 1.5rem;
@@ -9244,14 +9240,14 @@ video {
 .w-5{
   width: 1.25rem;
 }
+.w-full{
+  width: 100%;
+}
 .w-8{
   width: 2rem;
 }
 .w-12{
   width: 3rem;
-}
-.w-full{
-  width: 100%;
 }
 .w-0{
   width: 0px;
@@ -9286,6 +9282,9 @@ video {
 .min-w-0{
   min-width: 0px;
 }
+.max-w-screen-md{
+  max-width: 768px;
+}
 .max-w-xs{
   max-width: 20rem;
 }
@@ -9298,9 +9297,6 @@ video {
 .max-w-screen-lg{
   max-width: 1024px;
 }
-.max-w-screen-md{
-  max-width: 768px;
-}
 .flex-1{
   flex: 1 1 0%;
 }
@@ -9312,6 +9308,9 @@ video {
 }
 .flex-grow{
   flex-grow: 1;
+}
+.table-auto{
+  table-layout: auto;
 }
 .origin-top-right{
   transform-origin: top right;
@@ -9347,6 +9346,9 @@ video {
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
+}
+.grid-cols-2{
+  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 .grid-cols-1{
   grid-template-columns: repeat(1, minmax(0, 1fr));
@@ -9402,15 +9404,15 @@ video {
   margin-top: calc(-1px * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(-1px * var(--tw-space-y-reverse));
 }
-.space-x-1 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
-}
 .space-x-8 > :not([hidden]) ~ :not([hidden]){
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
   margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-x-1 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
+  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 .divide-y > :not([hidden]) ~ :not([hidden]){
   --tw-divide-y-reverse: 0;
@@ -9499,11 +9501,11 @@ video {
 .border-b{
   border-bottom-width: 1px;
 }
-.border-l-4{
-  border-left-width: 4px;
-}
 .border-b-2{
   border-bottom-width: 2px;
+}
+.border-l-4{
+  border-left-width: 4px;
 }
 .border-dashed{
   border-style: dashed;
@@ -9511,6 +9513,10 @@ video {
 .border-gray-300{
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+.border-slate-200{
+  --tw-border-opacity: 1;
+  border-color: rgb(226 232 240 / var(--tw-border-opacity));
 }
 .border-transparent{
   border-color: transparent;
@@ -9523,17 +9529,13 @@ video {
   --tw-border-opacity: 1;
   border-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
-.border-slate-200{
+.border-blue-600{
   --tw-border-opacity: 1;
-  border-color: rgb(226 232 240 / var(--tw-border-opacity));
+  border-color: rgb(37 99 235 / var(--tw-border-opacity));
 }
 .border-blue-300{
   --tw-border-opacity: 1;
   border-color: rgb(147 197 253 / var(--tw-border-opacity));
-}
-.border-blue-600{
-  --tw-border-opacity: 1;
-  border-color: rgb(37 99 235 / var(--tw-border-opacity));
 }
 .bg-white{
   --tw-bg-opacity: 1;
@@ -9555,6 +9557,14 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
+.bg-green-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
+}
+.bg-red-100{
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
+}
 .bg-gray-500{
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
@@ -9570,14 +9580,6 @@ video {
 .bg-indigo-100{
   --tw-bg-opacity: 1;
   background-color: rgb(224 231 255 / var(--tw-bg-opacity));
-}
-.bg-green-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
-}
-.bg-red-100{
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
 }
 .bg-blue-300{
   --tw-bg-opacity: 1;
@@ -9606,14 +9608,14 @@ video {
 .p-4{
   padding: 1rem;
 }
+.p-1{
+  padding: 0.25rem;
+}
 .p-2\.5{
   padding: 0.625rem;
 }
 .p-6{
   padding: 1.5rem;
-}
-.p-1{
-  padding: 0.25rem;
 }
 .p-3{
   padding: 0.75rem;
@@ -9646,21 +9648,25 @@ video {
   padding-left: 1.5rem;
   padding-right: 1.5rem;
 }
+.py-5{
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+}
 .px-7{
   padding-left: 1.75rem;
   padding-right: 1.75rem;
 }
-.py-5{
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 .px-3{
   padding-left: 0.75rem;
   padding-right: 0.75rem;
 }
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+.px-1{
+  padding-left: 0.25rem;
+  padding-right: 0.25rem;
 }
 .px-5{
   padding-left: 1.25rem;
@@ -9681,10 +9687,6 @@ video {
 .py-0{
   padding-top: 0px;
   padding-bottom: 0px;
-}
-.px-1{
-  padding-left: 0.25rem;
-  padding-right: 0.25rem;
 }
 .pl-1{
   padding-left: 0.25rem;
@@ -9838,9 +9840,25 @@ video {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
+.text-gray-50{
+  --tw-text-opacity: 1;
+  color: rgb(249 250 251 / var(--tw-text-opacity));
+}
+.text-green-600{
+  --tw-text-opacity: 1;
+  color: rgb(22 163 74 / var(--tw-text-opacity));
+}
 .text-gray-800{
   --tw-text-opacity: 1;
   color: rgb(31 41 55 / var(--tw-text-opacity));
+}
+.text-blue-600{
+  --tw-text-opacity: 1;
+  color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+.text-blue-400{
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
 }
 .text-white{
   --tw-text-opacity: 1;
@@ -9857,14 +9875,6 @@ video {
 .text-red-800{
   --tw-text-opacity: 1;
   color: rgb(153 27 27 / var(--tw-text-opacity));
-}
-.text-blue-600{
-  --tw-text-opacity: 1;
-  color: rgb(37 99 235 / var(--tw-text-opacity));
-}
-.text-blue-400{
-  --tw-text-opacity: 1;
-  color: rgb(96 165 250 / var(--tw-text-opacity));
 }
 .underline{
   text-decoration-line: underline;
@@ -9888,14 +9898,14 @@ video {
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
-.shadow-xl{
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
 .shadow{
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.shadow-xl{
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 .outline-none{
@@ -10889,14 +10899,14 @@ hr{
   --tw-ring-offset-width: 2px;
 }
 
-.hover\:border-gray-300:hover{
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity));
-}
-
 .hover\:border-blue-700:hover{
   --tw-border-opacity: 1;
   border-color: rgb(29 78 216 / var(--tw-border-opacity));
+}
+
+.hover\:border-gray-300:hover{
+  --tw-border-opacity: 1;
+  border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
 .hover\:bg-gray-100:hover{
@@ -10939,6 +10949,16 @@ hr{
   color: rgb(31 41 55 / var(--tw-text-opacity));
 }
 
+.hover\:text-blue-700:hover{
+  --tw-text-opacity: 1;
+  color: rgb(29 78 216 / var(--tw-text-opacity));
+}
+
+.hover\:text-gray-700:hover{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
 .hover\:text-gray-900:hover{
   --tw-text-opacity: 1;
   color: rgb(17 24 39 / var(--tw-text-opacity));
@@ -10947,16 +10967,6 @@ hr{
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.hover\:text-gray-700:hover{
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.hover\:text-blue-700:hover{
-  --tw-text-opacity: 1;
-  color: rgb(29 78 216 / var(--tw-text-opacity));
 }
 
 .focus\:z-10:focus{
@@ -11040,6 +11050,10 @@ hr{
 }
 
 @media (prefers-color-scheme: dark){
+  .dark\:border-blue-300{
+    --tw-border-opacity: 1;
+    border-color: rgb(147 197 253 / var(--tw-border-opacity));
+  }
   .dark\:border-gray-600{
     --tw-border-opacity: 1;
     border-color: rgb(75 85 99 / var(--tw-border-opacity));
@@ -11047,10 +11061,6 @@ hr{
   .dark\:border-gray-400{
     --tw-border-opacity: 1;
     border-color: rgb(156 163 175 / var(--tw-border-opacity));
-  }
-  .dark\:border-blue-300{
-    --tw-border-opacity: 1;
-    border-color: rgb(147 197 253 / var(--tw-border-opacity));
   }
   .dark\:bg-gray-700{
     --tw-bg-opacity: 1;
@@ -11080,17 +11090,21 @@ hr{
     --tw-bg-opacity: 1;
     background-color: rgb(254 202 202 / var(--tw-bg-opacity));
   }
-  .dark\:text-gray-200{
-    --tw-text-opacity: 1;
-    color: rgb(229 231 235 / var(--tw-text-opacity));
-  }
   .dark\:text-gray-300{
     --tw-text-opacity: 1;
     color: rgb(209 213 219 / var(--tw-text-opacity));
   }
+  .dark\:text-gray-200{
+    --tw-text-opacity: 1;
+    color: rgb(229 231 235 / var(--tw-text-opacity));
+  }
   .dark\:text-gray-100{
     --tw-text-opacity: 1;
     color: rgb(243 244 246 / var(--tw-text-opacity));
+  }
+  .dark\:text-blue-300{
+    --tw-text-opacity: 1;
+    color: rgb(147 197 253 / var(--tw-text-opacity));
   }
   .dark\:text-white{
     --tw-text-opacity: 1;
@@ -11111,10 +11125,6 @@ hr{
   .dark\:text-gray-400{
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
-  }
-  .dark\:text-blue-300{
-    --tw-text-opacity: 1;
-    color: rgb(147 197 253 / var(--tw-text-opacity));
   }
   .dark\:placeholder-gray-200::-moz-placeholder{
     --tw-placeholder-opacity: 1;
@@ -11152,10 +11162,6 @@ hr{
     --tw-bg-opacity: 1;
     background-color: rgb(156 163 175 / var(--tw-bg-opacity));
   }
-  .dark\:hover\:text-gray-200:hover{
-    --tw-text-opacity: 1;
-    color: rgb(229 231 235 / var(--tw-text-opacity));
-  }
   .dark\:hover\:text-blue-400:hover{
     --tw-text-opacity: 1;
     color: rgb(96 165 250 / var(--tw-text-opacity));
@@ -11163,6 +11169,10 @@ hr{
   .dark\:hover\:text-gray-400:hover{
     --tw-text-opacity: 1;
     color: rgb(156 163 175 / var(--tw-text-opacity));
+  }
+  .dark\:hover\:text-gray-200:hover{
+    --tw-text-opacity: 1;
+    color: rgb(229 231 235 / var(--tw-text-opacity));
   }
   .dark\:focus\:border-blue-500:focus{
     --tw-border-opacity: 1;
@@ -11179,12 +11189,6 @@ hr{
 }
 
 @media (min-width: 640px){
-  .sm\:inset-0{
-    top: 0px;
-    right: 0px;
-    bottom: 0px;
-    left: 0px;
-  }
   .sm\:block{
     display: block;
   }
@@ -11285,14 +11289,11 @@ hr{
   .md\:w-\[calc\(100\%-15rem\)\]{
     width: calc(100% - 15rem);
   }
-  .md\:w-96{
-    width: 24rem;
-  }
-  .md\:w-1\/2{
-    width: 50%;
-  }
   .md\:w-9\/12{
     width: 75%;
+  }
+  .md\:w-96{
+    width: 24rem;
   }
   .md\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
@@ -11315,11 +11316,11 @@ hr{
   .lg\:col-span-3{
     grid-column: span 3 / span 3;
   }
-  .lg\:w-1\/2{
-    width: 50%;
-  }
   .lg\:w-full{
     width: 100%;
+  }
+  .lg\:w-1\/2{
+    width: 50%;
   }
   .lg\:grid-cols-4{
     grid-template-columns: repeat(4, minmax(0, 1fr));
